--- a/BlogMentions.html
+++ b/BlogMentions.html
@@ -51,7 +51,7 @@ Arun Sirpal (<a href="https://blobeater.blog/" rel="noopener" target="_blank">bl
 Arvind Shyamsundar (<a href="https://twitter.com/arvisam" rel="noopener" target="_blank">twitter</a>)
 
 <hr>
-Ben Miller (<a href="https://dbaduck.com/" rel="noopener" target="_blank">blog</a>|<a href="http://www.twitter.com/DBAduck" rel="noopener" target="_blank">twitter</a>|<a href="https://youtube.com/bertwagner" rel="noopener" target="_blank">YouTube</a>)
+Ben Miller (<a href="https://dbaduck.com/" rel="noopener" target="_blank">blog</a>|<a href="http://www.twitter.com/DBAduck" rel="noopener" target="_blank">twitter</a>)
 
 <hr>
 Bert Wagner (<a href="https://bertwagner.com/" rel="noopener" target="_blank">blog</a>|<a href="https://twitter.com/bertwagner" rel="noopener" target="_blank">twitter</a>|<a href="https://youtube.com/bertwagner" rel="noopener" target="_blank">YouTube</a>)
